# OMG

./: .coverage.cms-mbp_local.pid90814.XSd65I7x.Hblc51fHb7qh  .coverage.cms-mbp_local.pid90827.XbDtcNkx.HZTPAl0ax4Xh  .coverage.cms-mbp_local.pid90845.X170x2zx.HKfSpYHVUzHh  .coverage.cms-mbp_local.pid90854.XQsbl1Kx.HJA7wvcX4z4h  .coverage.cms-mbp_local.pid90871.Xkahw5jx.HMihqXasJGsh  .coverage.cms-mbp_local.pid90898.XrBYkSGx.Hbjv4FzSJsch  .coverage.cms-mbp_local.pid90922.XvNNUQex.HffzA8061fch  .coveragerc  .eslintrc.json  .gitignore  .mcp.json  .mutmut-cache  .npmignore  .releaserc.json  CHANGELOG.md  CLA.md  CLI-ADAPTER-MAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL-VERIFICATION-INDEX.md  OAL-setup.sh  OMG-setup.sh  OMG_COMPAT_CONTRACT.md  PRESET-REFERENCE.md  QUICK-REFERENCE.md  README.md  RELEASING.md  SECURITY.md  SUPPORT-MATRIX.md  THIRD_PARTY_NOTICES.md  UPSTREAM_DIFF.md  VERIFICATION.md  action.yml  bunfig.toml  channel-guarantees.json  eslint.config.js  host-tiers.json  install-quick.sh  install-verification.json  install.sh  (+8 more)
.claude-plugin/: marketplace.json  plugin.json
.gemini/: settings.json
.github/: pull_request_template.md
.kimi/: mcp.json
.omc/: handoff-portable.md  handoff.md
.omg/: governance.yaml
.sisyphus/: boulder.json
agents/: __init__.py  _model_roles.yaml  designer.md  model_roles.py  oal-api-builder.md  oal-architect-mode.md  oal-architect.md  oal-backend-engineer.md  oal-critic.md  oal-database-engineer.md  oal-escalation-router.md  oal-executor.md  oal-frontend-designer.md  oal-implement-mode.md  oal-infra-engineer.md  oal-qa-tester.md  oal-research-mode.md  oal-security-auditor.md  oal-testing-engineer.md  omg-accessibility-auditor.md  omg-api-tester.md  omg-architect-mode.md  omg-backend-engineer.md  omg-code-archeologist.md  omg-concurrency-expert.md  omg-config-manager.md  omg-data-engineer.md  omg-database-engineer.md  omg-debugger.md  omg-dependency-analyst.md  omg-devops-engineer.md  omg-docs-writer.md  omg-error-handler.md  omg-escalation-router.md  omg-frontend-designer.md  omg-implement-mode.md  omg-infra-engineer.md  omg-leak-detective.md  omg-log-analyst.md  omg-migration-specialist.md  (+12 more)
artifacts/: omg-compat-gap.json
claude_experimental/: __init__.py  _compat.py  _degradation.py  _flags.py  _lifecycle.py
codex-hud/: omg-codex-hud  omg_codex_hud.py
commands/: COMMAND-INDEX.md  OAL:ccg.md  OAL:compat.md  OAL:crazy.md  OAL:domain-init.md  OAL:escalate.md  OAL:health-check.md  OAL:init.md  OAL:mode.md  OAL:project-init.md  OAL:ralph-start.md  OAL:ralph-stop.md  OAL:teams.md  OMG:ai-commit.md  OMG:arch.md  OMG:ccg.md  OMG:compat.md  OMG:cost.md  OMG:crazy.md  OMG:create-agent.md  OMG:deep-plan.md  OMG:deps.md  OMG:diagnose-plugins.md  OMG:doctor.md  OMG:domain-init.md  OMG:escalate.md  OMG:forge.md  OMG:handoff.md  OMG:health-check.md  OMG:init.md  OMG:instant.md  OMG:issue.md  OMG:mode.md  OMG:next.md  OMG:playwright.md  OMG:preflight.md  OMG:preset.md  OMG:project-init.md  OMG:ralph-start.md  OMG:ralph-stop.md  (+30 more)
config/: lsp_languages.yaml  model-capabilities.yaml  packs.yaml  trusted-domains.json
control_plane/: __init__.py  openapi.yaml  server.py  server.ts  service.py  service.ts
crates/oal-natives/: Cargo.toml
crates/oal-natives/src/: grep.rs  highlight.rs  image.rs  lib.rs  ps.rs  shell.rs  task.rs  text.rs
cubic-agents/: causal-tracer.md  contract-integrity.md  public-surface-docs.md  release-safety.md  security-review.md
docs/: GETTING-STARTED.md  PARITY_CONTRACT.md  api-reference.md  architecture.md  command-reference.md  command-surface.md  comparison-v2.3.0.md  experimental-features.md  getting-started-beginner.md  getting-started-engineer.md  getting-started-exec.md  getting-started.md  governance.md  migration-guide.md  migration-v2.md  pack-migration.md  proof.md  providers.md  release-checklist.md  troubleshooting.md  upgrade-v3.md
hooks/: __init__.py  _agent_registry.py  _analytics.py  _budget.py  _budget.ts  _common.py  _common.ts  _compression_optimizer.py  _cost_ledger.py  _learnings.py  _memory.py  _post_write.py  _stop_helpers.py  _token_counter.py  approval_ui.py  branch_manager.py  budget_governor.py  circuit-breaker.py  circuit-breaker.ts  compression_feedback.py  config-guard.py  context_pressure.py  credential_store.py  fetch-rate-limits.py  firewall.py  firewall.ts  hashline-formatter-bridge.py  hashline-injector.py  hashline-manager.py  hashline-validator.py  idle-detector.py  intentgate-keyword-detector.py  kimi-adapter.py  language-preserve.py  magic-keyword-router.py  policy_engine.py  policy_engine.ts  post-tool-all.py  post-tool-failure.ts  post-tool-output.py  (+31 more)
hud/: oal-hud.mjs  omg-hud-enhanced.mjs  omg-hud.mjs
lab/: __init__.py  axolotl_adapter.py  forge_runner.py  gazebo_adapter.py  isaac_gym_adapter.py  mock_isaac_env.py  pipeline.py  pipeline.ts  policies.py  policies.ts  pybullet_adapter.py
oal_natives/: __init__.py  _bindings.py  clipboard.py  glob.py  grep.py  highlight.py  html.py  image.py  keys.py  prof.py  ps.py  shell.py  task.py  text.py
omg_natives/: __init__.py  glob.py  grep.py  html.py  image.py  index.ts  prof.py  ps.py  shell.py  text.py
packs/: schema.yaml
plugins/: README.md
registry/: __init__.py  approval_artifact.py  omg-capability.schema.json  skills.json  trusted_signers.json  verify_artifact.py  verify_artifact.ts
runtime/: __init__.py  adoption.py  adversarial_review.py  agent_selector.py  agent_store.py  api_twin.py  architecture_signal.py  ast_editor.py  auto_resume.py  autoresearch_engine.py  autorun_pipeline.py  background_verification.py  budget_envelopes.py  business_workflow.py  canonical_surface.py  canonical_taxonomy.py  checklist_tracker.py  claim_judge.py  cli_provider.py  common.ts  compat.py  compat.ts  complexity_classifier.py  compliance_governor.py  config_transaction.py  context_compactor.py  context_compiler.py  context_engine.py  context_limits.py  contract_compiler.py  core_imports.py  cost_governor.py  custom_agent_loader.py  data_lineage.py  decision_engine.py  decision_ledger.py  defense_state.py  demo_ux.py  (+130 more)
(+1823 files in other folders)
