[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-god"
version = "2.2.12"
description = "OMG (Oh My God) — Multi-agent orchestration, evidence-backed verification, and durable session state for Claude Code, Codex, and supported agent hosts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "trac3r00", email = "trac3r00@example.com"}
]
keywords = ["claude", "claude-code", "orchestration", "multi-agent", "ai", "llm", "codex", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=46.0.5",
    "fastmcp>=2.14.2",
    "requests>=2.32.4",
    "tomlkit>=0.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "Pillow>=10.3.0",
]
mcp = [
    "fastmcp>=2.14.2",
]

[project.urls]
Homepage = "https://github.com/trac3r00/OMG"
Repository = "https://github.com/trac3r00/OMG.git"
Issues = "https://github.com/trac3r00/OMG/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "commands*", "control_plane*", "hooks*", "lab*", "plugins*", "registry*", "runtime*"]

[tool.setuptools.package-data]
agents = ["*.md"]
commands = ["*.md"]
control_plane = ["*.yaml"]
plugins = ["**/*.json", "**/*.md"]
registry = ["*.json", "bundles/*.yaml"]
runtime = ["*.json"]

[tool.setuptools.data-files]
"." = ["OMG_COMPAT_CONTRACT.md", "settings.json", ".mcp.json"]
".claude-plugin" = [".claude-plugin/plugin.json", ".claude-plugin/marketplace.json"]
"docs" = ["docs/release-checklist.md"]
".agents/skills/omg" = [".agents/skills/omg/AGENTS.fragment.md", ".agents/skills/omg/codex-mcp.toml"]
".agents/skills/omg/control-plane" = [".agents/skills/omg/control-plane/SKILL.md", ".agents/skills/omg/control-plane/openai.yaml"]
".agents/skills/omg/hook-governor" = [".agents/skills/omg/hook-governor/SKILL.md", ".agents/skills/omg/hook-governor/openai.yaml"]
".agents/skills/omg/lsp-pack" = [".agents/skills/omg/lsp-pack/SKILL.md", ".agents/skills/omg/lsp-pack/openai.yaml"]
".agents/skills/omg/mcp-fabric" = [".agents/skills/omg/mcp-fabric/SKILL.md", ".agents/skills/omg/mcp-fabric/openai.yaml"]
".agents/skills/omg/secure-worktree-pipeline" = [".agents/skills/omg/secure-worktree-pipeline/SKILL.md", ".agents/skills/omg/secure-worktree-pipeline/openai.yaml"]
".agents/skills/omg/security-check" = [".agents/skills/omg/security-check/SKILL.md", ".agents/skills/omg/security-check/openai.yaml"]
".agents/skills/omg/api-twin" = [".agents/skills/omg/api-twin/SKILL.md", ".agents/skills/omg/api-twin/openai.yaml"]
".agents/skills/omg/preflight" = [".agents/skills/omg/preflight/SKILL.md", ".agents/skills/omg/preflight/openai.yaml"]
".agents/skills/omg/robotics" = [".agents/skills/omg/robotics/SKILL.md", ".agents/skills/omg/robotics/openai.yaml"]
".agents/skills/omg/vision" = [".agents/skills/omg/vision/SKILL.md", ".agents/skills/omg/vision/openai.yaml"]
".agents/skills/omg/algorithms" = [".agents/skills/omg/algorithms/SKILL.md", ".agents/skills/omg/algorithms/openai.yaml"]
".agents/skills/omg/health" = [".agents/skills/omg/health/SKILL.md", ".agents/skills/omg/health/openai.yaml"]
".agents/skills/omg/tracebank" = [".agents/skills/omg/tracebank/SKILL.md", ".agents/skills/omg/tracebank/openai.yaml"]
".agents/skills/omg/eval-gate" = [".agents/skills/omg/eval-gate/SKILL.md", ".agents/skills/omg/eval-gate/openai.yaml"]
".agents/skills/omg/delta-classifier" = [".agents/skills/omg/delta-classifier/SKILL.md", ".agents/skills/omg/delta-classifier/openai.yaml"]
".agents/skills/omg/incident-replay" = [".agents/skills/omg/incident-replay/SKILL.md", ".agents/skills/omg/incident-replay/openai.yaml"]
".agents/skills/omg/data-lineage" = [".agents/skills/omg/data-lineage/SKILL.md", ".agents/skills/omg/data-lineage/openai.yaml"]
".agents/skills/omg/remote-supervisor" = [".agents/skills/omg/remote-supervisor/SKILL.md", ".agents/skills/omg/remote-supervisor/openai.yaml"]
".agents/skills/omg/plan-council" = [".agents/skills/omg/plan-council/SKILL.md", ".agents/skills/omg/plan-council/openai.yaml"]
".agents/skills/omg/claim-judge" = [".agents/skills/omg/claim-judge/SKILL.md", ".agents/skills/omg/claim-judge/openai.yaml"]
".agents/skills/omg/test-intent-lock" = [".agents/skills/omg/test-intent-lock/SKILL.md", ".agents/skills/omg/test-intent-lock/openai.yaml"]
".agents/skills/omg/proof-gate" = [".agents/skills/omg/proof-gate/SKILL.md", ".agents/skills/omg/proof-gate/openai.yaml"]
".agents/skills/omg/hash-edit" = [".agents/skills/omg/hash-edit/SKILL.md", ".agents/skills/omg/hash-edit/openai.yaml"]
".agents/skills/omg/ast-pack" = [".agents/skills/omg/ast-pack/SKILL.md", ".agents/skills/omg/ast-pack/openai.yaml"]
".agents/skills/omg/terminal-lane" = [".agents/skills/omg/terminal-lane/SKILL.md", ".agents/skills/omg/terminal-lane/openai.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-n",
    "auto",
    "--dist",
    "loadgroup",
    "--timeout=30",
    "--cov=runtime",
    "--cov=hooks",
    "--cov=commands",
    "--cov=plugins",
    "--cov=tools",
    "--cov=agents",
    "--cov=registry",
    "--cov=lab",
    "--cov=control_plane",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow",
    "e2e: marks tests as end-to-end tests (heavy)",
    "integration: marks tests as integration tests (heavy)",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["runtime", "hooks", "commands", "plugins", "tools", "agents", "registry", "lab", "control_plane"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    ".venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
